# dashboard/urls.py
@@ -1,8 +1,9 @@
 from django.urls import path
 
-from .views import DashboardOverviewView, DashboardSettingsView
+from .views import AppLaunchMediaView, DashboardOverviewView, DashboardSettingsView
 
 urlpatterns = [
+    path("app-media/", AppLaunchMediaView.as_view(), name="app-launch-media"),
     path("overview/", DashboardOverviewView.as_view(), name="dashboard-overview"),
     path("settings/", DashboardSettingsView.as_view(), name="dashboard-settings"),
 ]
